# godotmark-rs

./: .gitignore  Cargo.toml  GodotMark.gdns  GodotMark.tscn  lib.tres  project.godot
src/: godot_mark.rs  lib.rs
