[package]
name = "godotmark-rs"
version = "0.1.0"
authors = ["Aaron Winter <winter.aaron93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.3"
rand = "0.8.3"

[lib]
crate-type = ["cdylib"]
